<resources>
    <string name="app_name">DIF Café-Bar</string>
    <string name="usuario">Nombre del Usuario</string>
    <string name="lg"></string>
    <string name="rc">New here? Sign up</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="gmsil">gmail</string>
    <string name="fecha">Fecha de Nacimiento</string>
    <string name="telefono">N° telefonico</string>
    <string name="requeridos"><u>Utiliza ocho caracteres como mínimo con una combinación de letras, números y símbolos</u></string>
    <string name="clave">Contraseña</string>
    <string name="confirmar">Confirmar</string>

    //botones
    <string name="iniciar">Login</string>
    <string name="resgistro">Registrar</string>


    <string name="title_activity_registrar">registrar</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_registro">registro</string>


</resources>