<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <EditText
        android:id="@+id/nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="30dp"
        android:inputType="textPersonName"
        android:hint="@string/nombre"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintEnd_toStartOf="@+id/apellido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/apellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="30dp"
        android:inputType="textPersonName"
        android:hint="@string/apellido"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nombre"
        />

    <EditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/gmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:inputType="textEmailAddress"
        android:hint="@string/usuario"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        app:layout_constraintStart_toStartOf="parent"

        />



    <EditText
        android:id="@+id/contraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="30dp"
        android:inputType="textPassword"
        android:hint="@string/clave"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintEnd_toStartOf="@+id/ccontraseña"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gmail"
        app:layout_constraintStart_toStartOf="parent"

        />

    <EditText
        android:id="@+id/ccontraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="30dp"
        android:inputType="textPassword"
        android:hint="@string/confirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gmail"
        app:layout_constraintStart_toEndOf="@+id/contraseña"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="531dp"
        app:layout_constraintVertical_bias="0.5"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>