<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/usuario"
        android:gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPersonName"

        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/clave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/clave"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPassword"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/envio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintEnd_toStartOf="@+id/resgistro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clave"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/resgistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/requeridos
"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clave"
        app:layout_constraintStart_toEndOf="@+id/envio"
        />

    <TextView
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:textColor="@color/black"
        android:hint="@string/rc"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="552dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

